# devatapath-bot

./: .env  devatapath.db  main.py  pyproject.toml  requirements.txt
alembic/versions/: 744655f5622b_initial_migration.py  d0e073ec1ccc_add_start_date_and_end_date_to_.py
app/bot/: __init__.py
app/bot/handlers/: admin.py  course_select.py  menu_handlers.py  payment.py  start.py  states.py  user.py
app/core/: config.py  mini_courses.json  settings.py
app/db/: base.py  models.py
app/keyboards/: menu.py
app/services/: delivery.py
database/: db.py  models.py
handlers/: course_select.py  menu_handlers.py  payment.py  start.py
keyboards/: course_select.py
